SW-6497 - Fixed: The zoom viewer is now visible in IE 10

--- a/templates/_emotion/frontend/_resources/styles/emotion.css
+++ b/templates/_emotion/frontend/_resources/styles/emotion.css
@@ -3829,3 +3829,4 @@ body #content .banner-slider-emotion .ajaxSlider .slide_navigation {
 .fuzzy_result_box .inner_box {
     border: 1px solid #dfdfdf;
 }
+.mousetrap { opacity: 0; background: #fff }
